apps/homepage/overlays/stage/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  template:
    spec:
      containers:
        - name: homepage
