apps/homepage/overlays/stage/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
spec:
  rules:
    - host: homepage.skravops-cmd.space
  tls:
    - hosts:
        - homepage.skravops-cmd.space
